# metrics_core

./: .gitignore  Cargo.toml  REVIEW_REPORT.md  package.json  readme.md
.github/workflows/: ci.yml  release.yml
examples/: index.ts  metrics.py  monitor.py
examples/bun/: ffi.ts  index.ts  mod.ts  types.ts  ui.ts
examples/python/: __init__.py  ffi.py  monitor.py  types.py  ui.py
src/: lib.rs  types.rs
src/ffi/: mod.rs  types.rs
src/platform/: common.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/platform/gpus/: linux.rs  mod.rs  nvidia.rs
src/platform/network_connections/: linux.rs  macos.rs  mod.rs  windows.rs
