[package]
name = "metrics_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "metrics"
crate-type = ["cdylib", "rlib"]

[dependencies]
sysinfo = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
starship-battery = "0.10.0"
nvml-wrapper = "0.10"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_Threading",
    "Win32_Foundation",
] }


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
